--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-18  Martin Baulig  <martin@gnome.org>
 
+	* interface/IInferior.cs, IDebuggerBackend.cs: Added Stop() method.
+
+2002-09-18  Martin Baulig  <martin@gnome.org>
+
 	* interface/IArchitecture.cs: Made this interface public.
 
 	* interface/IDebugerBackend.cs (IDebuggerBackend.Inferior): Removed
