--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-19  Martin Baulig  <martin@gnome.org>
 
+	* backends/Debugger.cs: Only dispose the current stack frame if it
+	has actually changed.
+
+2002-09-19  Martin Baulig  <martin@gnome.org>
+
 	* interfaces/ITargetLocation.cs: Make this work again.
 
 	* classes/TargetLocation.cs: This is now an abstract base class.
