--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2002-09-20  Martin Baulig  <martin@gnome.org>
 
+	Started to add support for variables.
+
+	* interfaces/ITargetType.cs: New public interface.
+
+	* interfaces/IVariable.cs: New public interface.
+
+	* interfaces/IMethod.cs (IMethod.Parameters): New property.
+
+2002-09-20  Martin Baulig  <martin@gnome.org>
+
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs (MonoMethod):
 	Set IMethod.MethodHandle to the method's Reflection.MethodBase.
 	
