--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-21  Martin Baulig  <martin@gnome.org>
 
+	* interfaces/ILanguageCSharp.cs: Killed.
+
+2002-09-21  Martin Baulig  <martin@gnome.org>
+
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: Make this
 	work with the new symbol table format.
 
