--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-21  Martin Baulig  <martin@gnome.org>
 
+	* interfaces/ISourceFile.cs: Removed.
+	* classes/SourceFileFactory.cs: This is the only implementation.
+
+2002-09-21  Martin Baulig  <martin@gnome.org>
+
 	* interfaces/ISymbolTable.cs (ISymbolTableCollection): Removed this interface.
 	* classes/SymbolTableCollection.cs: This is the only implementation.
 
