--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-21  Martin Baulig  <martin@gnome.org>
 
+	* classes/StackFrame.cs: Moved here and made `public sealed'.
+
+2002-09-21  Martin Baulig  <martin@gnome.org>
+
 	* interfaces/ISourceLocation.cs: Removed.
 	* classes/SourceLocation.cs: This is the only implementation.
 
