--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-21  Martin Baulig  <martin@gnome.org>
 
+	* arch/Bfd.cs, BfdDisassembler.cs, DwarfReader.cs: Made these classes internal.
+
+2002-09-21  Martin Baulig  <martin@gnome.org>
+
 	* classes/StackFrame.cs: Moved here and made `public sealed'.
 
 2002-09-21  Martin Baulig  <martin@gnome.org>
