--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-09-21  Martin Baulig  <martin@gnome.org>
 
+	* backends/StepFrame.cs: Moved StepFrame here and made it `public sealed'.
+
+	* backends/IInferior.cs (IStepFrame): We don't need this interface.
+
+2002-09-21  Martin Baulig  <martin@gnome.org>
+
 	* backends/Debugger.cs (TargetAsyncResult): Make this a private nested class
 	inside PTraceInferior.
 
