--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-21  Martin Baulig  <martin@gnome.org>
 
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs (SymbolTableException):
+	This exception already exists in class/SymbolTableException.cs.
+
+2002-09-21  Martin Baulig  <martin@gnome.org>
+
 	* backends/StepFrame.cs: Moved StepFrame here and made it `public sealed'.
 
 	* backends/IInferior.cs (IStepFrame): We don't need this interface.
