--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-26  Martin Baulig  <martin@gnome.org>
 
+	* backends/Debugger.cs (DebuggerBackend.LoadNativeSymbolTable): New public
+	property.  Only load the native symbol table if this is set.
+	
+2002-09-26  Martin Baulig  <martin@gnome.org>
+
 	* interfaces/ISourceBuffer.cs (ISourceBuffer.HasContents): New property.
 
 	* backends/Debugger.cs: Make the source factory optional and
