--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-26  Martin Baulig  <martin@gnome.org>
 
+	* classes/ILDisassembler.cs: Removed.  We use the .il which has
+	been created by the JIT as source code.
+
+2002-09-26  Martin Baulig  <martin@gnome.org>
+
 	* backends/Debugger.cs (DebuggerBackend.LoadNativeSymbolTable): New public
 	property.  Only load the native symbol table if this is set.
 	
