--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-27  Martin Baulig  <martin@gnome.org>
 
+	* backends/*, arch/*: Removed the SourceFileFactory argument everywhere.
+
+2002-09-27  Martin Baulig  <martin@gnome.org>
+
 	* frontends/gui/SourceManager.cs: If ISourceBuffer.HasContents is false,
 	ISourceBuffer.Name is a filename which we need to load.
 
