--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-10-01  Miguel de Icaza  <miguel@ximian.com>
 
+	* frontends/command-line/Interpreter.cs: Update online help.
+
 	* frontends/gui/RegisterDisplay.cs: Love touch ups, it now works
 	as intended.
 
